pkg/controller/testdata/externalname/expected.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: acorn-my-app-service-7777-service-7777
  namespace: my-app-namespace
spec:
  portLevelMtls:
    "9999":
      mode: PERMISSIVE
  selector:
    matchLabels:
      acorn.io/app-name: my-app
      acorn.io/app-namespace: acorn
      acorn.io/managed: "true"
      port-number.acorn.io/9999: "true"
      service-name.acorn.io/service-7777: "true"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: acorn-my-app-service-7777-service-7777
  namespace: my-app-namespace
spec:
  rules:
    - from:
        - source:
            ipBlocks:
              - 10.42.0.0/24
      to:
        - operation:
            ports:
              - "9999"
  selector:
    matchLabels:
      acorn.io/app-name: my-app
      acorn.io/app-namespace: acorn
      acorn.io/managed: "true"
      port-number.acorn.io/9999: "true"
      service-name.acorn.io/service-7777: "true"
